5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1800_2566.log
== TEST (2019-06-06 11:29:51) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))

for i in range(5,2):
print(i)
-- ERROR:
File "XXXX", line 6
    print(i)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:29:58) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))

for i in range(5,2):
   print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:30:26) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))

for i in range(5,2):
   print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:32:02) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))

for i in range(5,2):
   print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:33:01) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)
for i in range(size(v)):
	if(i == 2):
		x[0] = v[i]
	elif(i == 3):
		x[1] = v[i]
	elif(i == 4):
		x[2] = v[i]
	elif(i == 5):
		x[3] = v[i]:
	elif(i == 6):
		x[4] = v[i]
	elif(i == 7):
		x[5] = v[i]
print(x)
-- ERROR:
File "XXXX", line 13
    x[3] = v[i]:
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:33:11) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)
for i in range(size(v)):
	if(i == 2):
		x[0] = v[i]
	elif(i == 3):
		x[1] = v[i]
	elif(i == 4):
		x[2] = v[i]
	elif(i == 5):
		x[3] = v[i]
	elif(i == 6):
		x[4] = v[i]
	elif(i == 7):
		x[5] = v[i]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:36:01) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0
for i in range(size(v)):
	if(i == 2):
		x[0] = seg + 1
	elif(i == 3):
		x[1] = ter + 1
	elif(i == 4):
		x[2] = qua + 1
	elif(i == 5):
		x[3] = qui + 1
	elif(i == 6):
		x[4] = sex + 1
	elif(i == 7):
		x[5] = sab + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:36:37) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0
for i in v:
	if(i == 2):
		x[0] = seg + 1
	elif(i == 3):
		x[1] = ter + 1
	elif(i == 4):
		x[2] = qua + 1
	elif(i == 5):
		x[3] = qui + 1
	elif(i == 6):
		x[4] = sex + 1
	elif(i == 7):
		x[5] = sab + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:39:20) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)
r = 0
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0
while(r < size(v)):
	for i in v:
		if(i == 2):
			x[0] = seg + 1
		elif(i == 3):
				x[1] = ter + 1
		elif(i == 4):
			x[2] = qua + 1
		elif(i == 5):
			x[3] = qui + 1
		elif(i == 6):
			x[4] = sex + 1
		elif(i == 7):
			x[5] = sab + 1
		r = r + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:41:45) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)

seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in range(size(v)):
	if(i == 2):
		x[0] = x[0] + 1
	elif(i == 3):
		x[1] = x[1] + 1
	elif(i == 4):
		x[2] = x[2] + 1
	elif(i == 5):
		x[3] = x[3] + 1
	elif(i == 6):
		x[4] = x[4] + 1
	elif(i == 7):
		x[5] = x[5] + 1

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:42:47) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)

seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in range(size(v)):
	if(v[i] == 2):
		x[0] = x[0] + 1
	elif(v[i] == 3):
		x[1] = x[1] + 1
	elif(v[i] == 4):
		x[2] = x[2] + 1
	elif(v[i] == 5):
		x[3] = x[3] + 1
	elif(v[i] == 6):
		x[4] = x[4] + 1
	elif(v[i] == 7):
		x[5] = x[5] + 1

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:46:14) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)

seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in range(size(v)):
	if(v[i] == 2):
		x[0] = x[0] + 1
	elif(v[i] == 3):
		x[1] = x[1] + 1
	elif(v[i] == 4):
		x[2] = x[2] + 1
	elif(v[i] == 5):
		x[3] = x[3] + 1
	elif(v[i] == 6):
		x[4] = x[4] + 1
	elif(v[i] == 7):
		x[5] = x[5] + 1

print(x)
for r in range(size(x)):
	x[0] = x[0]/6*(1/100)
	x[1] = x[1]/6*(1/100)
	x[2] = x[2]/6*(1/100)
	x[3] = x[3]/6*(1/100)
	x[4] = x[4]/6*(1/100)
	x[5] = x[5]/6*(1/100)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:46:48) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)

seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in range(size(v)):
	if(v[i] == 2):
		x[0] = x[0] + 1
	elif(v[i] == 3):
		x[1] = x[1] + 1
	elif(v[i] == 4):
		x[2] = x[2] + 1
	elif(v[i] == 5):
		x[3] = x[3] + 1
	elif(v[i] == 6):
		x[4] = x[4] + 1
	elif(v[i] == 7):
		x[5] = x[5] + 1

print(x)
for r in range(size(x)):
	x[0] = x[0]*(1/100)
	x[1] = x[1]*(1/100)
	x[2] = x[2]*(1/100)
	x[3] = x[3]*(1/100)
	x[4] = x[4]*(1/100)
	x[5] = x[5]*(1/100)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:46:53) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)

seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in range(size(v)):
	if(v[i] == 2):
		x[0] = x[0] + 1
	elif(v[i] == 3):
		x[1] = x[1] + 1
	elif(v[i] == 4):
		x[2] = x[2] + 1
	elif(v[i] == 5):
		x[3] = x[3] + 1
	elif(v[i] == 6):
		x[4] = x[4] + 1
	elif(v[i] == 7):
		x[5] = x[5] + 1

print(x)
for r in range(size(x)):
	x[0] = x[0]*(1/100)
	x[1] = x[1]*(1/100)
	x[2] = x[2]*(1/100)
	x[3] = x[3]*(1/100)
	x[4] = x[4]*(1/100)
	x[5] = x[5]*(1/100)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:48:16) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)

seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in range(size(v)):
	if(v[i] == 2):
		x[0] = x[0] + 1
	elif(v[i] == 3):
		x[1] = x[1] + 1
	elif(v[i] == 4):
		x[2] = x[2] + 1
	elif(v[i] == 5):
		x[3] = x[3] + 1
	elif(v[i] == 6):
		x[4] = x[4] + 1
	elif(v[i] == 7):
		x[5] = x[5] + 1

print(x)
for r in range(size(x)):
	x[0] = x[0]/6
	x[1] = x[1]/6
	x[2] = x[2]/6
	x[3] = x[3]/6
	x[4] = x[4]/6
	x[5] = x[5]/6
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:49:14) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)

seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in range(size(v)):
	if(v[i] == 2):
		x[0] = x[0] + 1
	elif(v[i] == 3):
		x[1] = x[1] + 1
	elif(v[i] == 4):
		x[2] = x[2] + 1
	elif(v[i] == 5):
		x[3] = x[3] + 1
	elif(v[i] == 6):
		x[4] = x[4] + 1
	elif(v[i] == 7):
		x[5] = x[5] + 1

print(x)
for r in range(size(x)):
	x[0] = (x[0]/6)*100
	x[1] = (x[1]/6)*100
	x[2] = (x[2]/6)*100
	x[3] = (x[3]/6)*100
	x[4] = (x[4]/6)*100
	x[5] = (x[5]/6)*100
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:49:14) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)

seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in range(size(v)):
	if(v[i] == 2):
		x[0] = x[0] + 1
	elif(v[i] == 3):
		x[1] = x[1] + 1
	elif(v[i] == 4):
		x[2] = x[2] + 1
	elif(v[i] == 5):
		x[3] = x[3] + 1
	elif(v[i] == 6):
		x[4] = x[4] + 1
	elif(v[i] == 7):
		x[5] = x[5] + 1

print(x)
for r in range(size(x)):
	x[0] = (x[0]/6)*100
	x[1] = (x[1]/6)*100
	x[2] = (x[2]/6)*100
	x[3] = (x[3]/6)*100
	x[4] = (x[4]/6)*100
	x[5] = (x[5]/6)*100
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:49:14) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)

seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in range(size(v)):
	if(v[i] == 2):
		x[0] = x[0] + 1
	elif(v[i] == 3):
		x[1] = x[1] + 1
	elif(v[i] == 4):
		x[2] = x[2] + 1
	elif(v[i] == 5):
		x[3] = x[3] + 1
	elif(v[i] == 6):
		x[4] = x[4] + 1
	elif(v[i] == 7):
		x[5] = x[5] + 1

print(x)
for r in range(size(x)):
	x[0] = (x[0]/6)*100
	x[1] = (x[1]/6)*100
	x[2] = (x[2]/6)*100
	x[3] = (x[3]/6)*100
	x[4] = (x[4]/6)*100
	x[5] = (x[5]/6)*100
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:49:14) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)

seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in range(size(v)):
	if(v[i] == 2):
		x[0] = x[0] + 1
	elif(v[i] == 3):
		x[1] = x[1] + 1
	elif(v[i] == 4):
		x[2] = x[2] + 1
	elif(v[i] == 5):
		x[3] = x[3] + 1
	elif(v[i] == 6):
		x[4] = x[4] + 1
	elif(v[i] == 7):
		x[5] = x[5] + 1

print(x)
for r in range(size(x)):
	x[0] = (x[0]/6)*100
	x[1] = (x[1]/6)*100
	x[2] = (x[2]/6)*100
	x[3] = (x[3]/6)*100
	x[4] = (x[4]/6)*100
	x[5] = (x[5]/6)*100
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:49:51) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)

seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in range(size(v)):
	if(v[i] == 2):
		x[0] = x[0] + 1
	elif(v[i] == 3):
		x[1] = x[1] + 1
	elif(v[i] == 4):
		x[2] = x[2] + 1
	elif(v[i] == 5):
		x[3] = x[3] + 1
	elif(v[i] == 6):
		x[4] = x[4] + 1
	elif(v[i] == 7):
		x[5] = x[5] + 1

print(x)
x[0] = (x[0]/6)*100
x[1] = (x[1]/6)*100
x[2] = (x[2]/6)*100
x[3] = (x[3]/6)*100
x[4] = (x[4]/6)*100
x[5] = (x[5]/6)*100
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:52:47) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)

seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in range(size(v)):
	if(v[i] == 2):
		x[0] = x[0] + 1
	elif(v[i] == 3):
		x[1] = x[1] + 1
	elif(v[i] == 4):
		x[2] = x[2] + 1
	elif(v[i] == 5):
		x[3] = x[3] + 1
	elif(v[i] == 6):
		x[4] = x[4] + 1
	elif(v[i] == 7):
		x[5] = x[5] + 1

print(x)
x[0] = x[0]*10
x[1] = x[1]*10
x[2] = x[2]*10
x[3] = x[3]*10
x[4] = x[4]*10
x[5] = x[5]*10
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:54:18) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)

seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in range(size(v)):
	if(v[i] == 2):
		x[0] = x[0] + 1
	elif(v[i] == 3):
		x[1] = x[1] + 1
	elif(v[i] == 4):
		x[2] = x[2] + 1
	elif(v[i] == 5):
		x[3] = x[3] + 1
	elif(v[i] == 6):
		x[4] = x[4] + 1
	elif(v[i] == 7):
		x[5] = x[5] + 1

print(x)
for r in range(size(x)):
	x[0] = x[0]*10
	x[1] = x[1]*10
	x[2] = x[2]*10
	x[3] = x[3]*10
	x[4] = x[4]*10
	x[5] = x[5]*10
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:55:18) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)

seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in range(size(v)):
	if(v[i] == 2):
		x[0] = x[0] + 1
	elif(v[i] == 3):
		x[1] = x[1] + 1
	elif(v[i] == 4):
		x[2] = x[2] + 1
	elif(v[i] == 5):
		x[3] = x[3] + 1
	elif(v[i] == 6):
		x[4] = x[4] + 1
	elif(v[i] == 7):
		x[5] = x[5] + 1

x = 10 * x
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:55:41) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)

seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for i in range(size(v)):
	if(v[i] == 2):
		x[0] = x[0] + 1
	elif(v[i] == 3):
		x[1] = x[1] + 1
	elif(v[i] == 4):
		x[2] = x[2] + 1
	elif(v[i] == 5):
		x[3] = x[3] + 1
	elif(v[i] == 6):
		x[4] = x[4] + 1
	elif(v[i] == 7):
		x[5] = x[5] + 1

x = 10 * x
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 12:58:44) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)

for i in range(size(v)):
	if(v[i] == 2):
		x[0] = x[0] + 1
	elif(v[i] == 3):
		x[1] = x[1] + 1
	elif(v[i] == 4):
		x[2] = x[2] + 1
	elif(v[i] == 5):
		x[3] = x[3] + 1
	elif(v[i] == 6):
		x[4] = x[4] + 1
	elif(v[i] == 7):
		x[5] = x[5] + 1

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:01:19) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)

for i in range(size(v)):
	if(v[i] == 2):
		x[0] = x[0] + 1
	elif(v[i] == 3):
		x[1] = x[1] + 1
	elif(v[i] == 4):
		x[2] = x[2] + 1
	elif(v[i] == 5):
		x[3] = x[3] + 1
	elif(v[i] == 6):
		x[4] = x[4] + 1
	elif(v[i] == 7):
		x[5] = x[5] + 1

x = (x/size(v)) * 100
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:01:38) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)

for i in range(size(v)):
	if(v[i] == 2):
		x[0] = x[0] + 1
	elif(v[i] == 3):
		x[1] = x[1] + 1
	elif(v[i] == 4):
		x[2] = x[2] + 1
	elif(v[i] == 5):
		x[3] = x[3] + 1
	elif(v[i] == 6):
		x[4] = x[4] + 1
	elif(v[i] == 7):
		x[5] = x[5] + 1

x = (x/size(v)) * 100
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:03:29) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)

for i in range(size(v)):
	if(v[i] == 2):
		x[0] = x[0] + 1
	elif(v[i] == 3):
		x[1] = x[1] + 1
	elif(v[i] == 4):
		x[2] = x[2] + 1
	elif(v[i] == 5):
		x[3] = x[3] + 1
	elif(v[i] == 6):
		x[4] = x[4] + 1
	elif(v[i] == 7):
		x[5] = x[5] + 1

x = (x/size(v)) * 100
for r in range(size(x)):
	x[0] = round(x[0], 1)
	x[1] = round(x[1], 1)
	x[2] = round(x[2], 1)
	x[3] = round(x[3], 1)
	x[4] = round(x[4], 1)
	x[5] = round(x[5], 1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:03:42) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)

for i in range(size(v)):
	if(v[i] == 2):
		x[0] = x[0] + 1
	elif(v[i] == 3):
		x[1] = x[1] + 1
	elif(v[i] == 4):
		x[2] = x[2] + 1
	elif(v[i] == 5):
		x[3] = x[3] + 1
	elif(v[i] == 6):
		x[4] = x[4] + 1
	elif(v[i] == 7):
		x[5] = x[5] + 1

x = (x/size(v)) * 100
for r in range(size(x)):
	x[0] = round(x[0], 1)
	x[1] = round(x[1], 1)
	x[2] = round(x[2], 1)
	x[3] = round(x[3], 1)
	x[4] = round(x[4], 1)
	x[5] = round(x[5], 1)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 13:03:57) 
-- CODE:
from numpy import *

v = array(eval(input("Insira o historico de faltas: ")))
x = zeros(6, dtype=float)

for i in range(size(v)):
	if(v[i] == 2):
		x[0] = x[0] + 1
	elif(v[i] == 3):
		x[1] = x[1] + 1
	elif(v[i] == 4):
		x[2] = x[2] + 1
	elif(v[i] == 5):
		x[3] = x[3] + 1
	elif(v[i] == 6):
		x[4] = x[4] + 1
	elif(v[i] == 7):
		x[5] = x[5] + 1

x = (x/size(v)) * 100
for r in range(size(x)):
	x[0] = round(x[0], 1)
	x[1] = round(x[1], 1)
	x[2] = round(x[2], 1)
	x[3] = round(x[3], 1)
	x[4] = round(x[4], 1)
	x[5] = round(x[5], 1)
print(x)
-- EXECUTION TIME:
1.08344
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
